File Structure, Typography, Slides
Sliding content using arrows on the screen. Modified directory structure so it better suits the project. Added basic typography.

--- a/index.html
+++ b/index.html
@@ -7,14 +7,44 @@
     <title>PhotographyPortfolio</title>
   </head>
   <body>
-    <section class="hero u-full-width">
+    <header class="hero u-full-width">
       <div class="container centered">
         <div class="row">
-          <div class="title">
-            <h1>Natalia Muresan</h1>
+          <div class="twelve columns title">
+            <h1>Muresan Natalia Diana</h1>
+            <h2><em>= Photographer / Designer =</em></h2>
+            <a href="#">
+              <div id="arrow"></div>
+            </a>
           </div>
         </div>
       </div>
-    </section
+    </header>
+    <section id="content">
+      <div class="container">
+        <div class="row">
+          <div class="twelve columns">
+            <br><br><br><br>
+            <a href="#">
+              <div id="arrow2"></div>
+            </a>
+      <br><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Veniam fugiat, eligendi neque perferendis optio iure tenetur. Quidem blanditiis, accusamus placeat, exercitationem delectus non, tempore repellendus quaerat, voluptates sed expedita ipsa.</p><br>
+      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Veniam fugiat, eligendi neque perferendis optio iure tenetur. Quidem blanditiis, accusamus placeat, exercitationem delectus non, tempore repellendus quaerat, voluptates sed expedita ipsa.</p><br>
+      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Veniam fugiat, eligendi neque perferendis optio iure tenetur. Quidem blanditiis, accusamus placeat, exercitationem delectus non, tempore repellendus quaerat, voluptates sed expedita ipsa.</p><br>
+      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Veniam fugiat, eligendi neque perferendis optio iure tenetur. Quidem blanditiis, accusamus placeat, exercitationem delectus non, tempore repellendus quaerat, voluptates sed expedita ipsa.</p><br>
+      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Veniam fugiat, eligendi neque perferendis optio iure tenetur. Quidem blanditiis, accusamus placeat, exercitationem delectus non, tempore repellendus quaerat, voluptates sed expedita ipsa.</p><br>
+      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Veniam fugiat, eligendi neque perferendis optio iure tenetur. Quidem blanditiis, accusamus placeat, exercitationem delectus non, tempore repellendus quaerat, voluptates sed expedita ipsa.</p><br>
+      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Veniam fugiat, eligendi neque perferendis optio iure tenetur. Quidem blanditiis, accusamus placeat, exercitationem delectus non, tempore repellendus quaerat, voluptates sed expedita ipsa.</p><br><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Veniam fugiat, eligendi neque perferendis optio iure tenetur. Quidem blanditiis, accusamus placeat, exercitationem delectus non, tempore repellendus quaerat, voluptates sed expedita ipsa.</p><br>
+      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Veniam fugiat, eligendi neque perferendis optio iure tenetur. Quidem blanditiis, accusamus placeat, exercitationem delectus non, tempore repellendus quaerat, voluptates sed expedita ipsa.</p><br>
+      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Veniam fugiat, eligendi neque perferendis optio iure tenetur. Quidem blanditiis, accusamus placeat, exercitationem delectus non, tempore repellendus quaerat, voluptates sed expedita ipsa.</p><br><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Veniam fugiat, eligendi neque perferendis optio iure tenetur. Quidem blanditiis, accusamus placeat, exercitationem delectus non, tempore repellendus quaerat, voluptates sed expedita ipsa.</p><br>
+      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Veniam fugiat, eligendi neque perferendis optio iure tenetur. Quidem blanditiis, accusamus placeat, exercitationem delectus non, tempore repellendus quaerat, voluptates sed expedita ipsa.</p><br><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Veniam fugiat, eligendi neque perferendis optio iure tenetur. Quidem blanditiis, accusamus placeat, exercitationem delectus non, tempore repellendus quaerat, voluptates sed expedita ipsa.</p><br>
+      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Veniam fugiat, eligendi neque perferendis optio iure tenetur. Quidem blanditiis, accusamus placeat, exercitationem delectus non, tempore repellendus quaerat, voluptates sed expedita ipsa.</p><br><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Veniam fugiat, eligendi neque perferendis optio iure tenetur. Quidem blanditiis, accusamus placeat, exercitationem delectus non, tempore repellendus quaerat, voluptates sed expedita ipsa.</p><br>
+      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Veniam fugiat, eligendi neque perferendis optio iure tenetur. Quidem blanditiis, accusamus placeat, exercitationem delectus non, tempore repellendus quaerat, voluptates sed expedita ipsa.</p><br>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <script src="js/scroll.js"></script>
   </body>
 </html>
