Social Media Icons, Email, Started Album
Tried out some colors and different typography/layout ideas.

--- a/index.html
+++ b/index.html
@@ -11,39 +11,55 @@
       <div class="container centered">
         <div class="row">
           <div class="twelve columns title">
-            <h1>Muresan Natalia Diana</h1>
+            <h1>Mureșan Natalia Diana</h1>
             <h2><em>= Photographer / Designer =</em></h2>
-            <a href="#">
-              <div id="arrow"></div>
-            </a>
-          </div>
-        </div>
-      </div>
-    </header>
+            <div class="social">
+              <a href="https://www.facebook.com/natalia.muresan.1728" target="_blank">
+                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path d="M12 0c-6.627 0-12 5.373-12 12s5.373 12 12 12 12-5.373 12-12-5.373-12-12-12zm3 8h-1.35c-.538 0-.65.221-.65.778v1.222h2l-.209 2h-1.791v7h-3v-7h-2v-2h2v-2.308c0-1.769.931-2.692 3.029-2.692h1.971v3z"/></svg>
+              </a> <!-- Facebook -->
+              <a href="https://github.com/nataliamuresan" target="_blank">
+                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path d="M12 0c-6.626 0-12 5.373-12 12 0 5.302 3.438 9.8 8.207 11.387.599.111.793-.261.793-.577v-2.234c-3.338.726-4.033-1.416-4.033-1.416-.546-1.387-1.333-1.756-1.333-1.756-1.089-.745.083-.729.083-.729 1.205.084 1.839 1.237 1.839 1.237 1.07 1.834 2.807 1.304 3.492.997.107-.775.418-1.305.762-1.604-2.665-.305-5.467-1.334-5.467-5.931 0-1.311.469-2.381 1.236-3.221-.124-.303-.535-1.524.117-3.176 0 0 1.008-.322 3.301 1.23.957-.266 1.983-.399 3.003-.404 1.02.005 2.047.138 3.006.404 2.291-1.552 3.297-1.23 3.297-1.23.653 1.653.242 2.874.118 3.176.77.84 1.235 1.911 1.235 3.221 0 4.609-2.807 5.624-5.479 5.921.43.372.823 1.102.823 2.222v3.293c0 .319.192.694.801.576 4.765-1.589 8.199-6.086 8.199-11.386 0-6.627-5.373-12-12-12z"/></svg>
+              </a> <!-- GitHub -->
+              <a href="" target="_blank">
+                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path d="M17.833 6.595v1.476c0 .237-.193.429-.435.429h-1.465c-.238 0-.434-.192-.434-.429v-1.476c0-.237.195-.428.434-.428h1.465c.242 0 .435.191.435.428zm-5.833 7.498c1.121 0 2.028-.908 2.028-2.029s-.907-2.029-2.028-2.029-2.028.908-2.028 2.029.907 2.029 2.028 2.029zm12-2.093c0 6.627-5.373 12-12 12s-12-5.373-12-12 5.373-12 12-12 12 5.373 12 12zm-5-1.75h-3.953c.316.533.508 1.149.508 1.813 0 1.968-1.596 3.564-3.563 3.564-1.969 0-3.564-1.596-3.564-3.564 0-.665.191-1.281.509-1.813h-3.937v5.996c0 1.521 1.27 2.754 2.791 2.754h8.454c1.521 0 2.755-1.233 2.755-2.754v-5.996zm-7.009 4.559c1.515 0 2.745-1.232 2.745-2.746 0-.822-.364-1.56-.937-2.063-.202-.177-.429-.324-.677-.437-.346-.157-.729-.245-1.132-.245-.405 0-.788.088-1.133.245-.246.112-.474.26-.675.437-.574.503-.938 1.242-.938 2.063.001 1.514 1.234 2.746 2.747 2.746zm7.009-7.055c0-1.521-1.234-2.754-2.755-2.754h-7.162v2.917h-.583v-2.917h-.583v2.917h-.584v-2.872c-.202.033-.397.083-.583.157v2.715h-.583v-2.393c-.702.5-1.167 1.31-1.167 2.23v1.913h4.359c.681-.748 1.633-1.167 2.632-1.167 1.004 0 1.954.422 2.631 1.167h4.378v-1.913z"/></svg>
+              </a> <!-- Instagram -->
+              <a href="" target="_blank">
+                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path d="M12 0c-6.627 0-12 5.373-12 12s5.373 12 12 12 12-5.373 12-12-5.373-12-12-12zm5.158 17.897c-.459.604-2.004 1.103-3.403 1.103-3.482 0-5.255-1.283-5.255-4.001v-3.592h-1.691l-.059-.059v-2.764l.039-.056.156-.052c1.398-.466 2.296-1.252 2.494-2.873.049-.392.377-.603.663-.603h4.172l.058.059v2.81l.058.059h2.219l.06.059v3.363l-.06.059h-2.229l-.06.059v3.332c.002.09.006.362.096.362h1.909l.057.04.868 2.574-.092.121zm-1.145-1.994l.581 1.721-.014.062c-.438.421-1.49.733-2.35.748l-.098.001c-2.828 0-3.313-2.16-3.313-3.435v-4.106l-.059-.059h-1.622l-.059-.059-.014-1.786.037-.054c1.462-.569 2.278-1.514 2.492-3.263.013-.097.093-.1.094-.1h2.011l.059.059v2.81l.059.059h2.219l.058.059v2.217l-.058.059h-2.229l-.057.059v3.911c.014.839.417 1.265 1.205 1.265.316 0 .65-.074.982-.201l.076.033z"/></svg>
+              </a> <!-- Tumblr -->
+            </div> <!-- .social -->
+            <div class="email">
+              <p><em>muresannatalia17@gmail.com</em></p>
+            </div>
+          </div> <!-- .title -->
+          <a href="#">
+            <div id="arrow"></div> <!-- SLIDE RIGHT -->
+          </a>
+        </div> <!-- .row -->
+      </div> <!-- container -->
+    </header> <!-- header.hero -->
     <section id="content">
       <div class="container">
-        <div class="row">
-          <div class="twelve columns">
-            <br><br><br><br>
-            <a href="#">
-              <div id="arrow2"></div>
-            </a>
-      <br><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Veniam fugiat, eligendi neque perferendis optio iure tenetur. Quidem blanditiis, accusamus placeat, exercitationem delectus non, tempore repellendus quaerat, voluptates sed expedita ipsa.</p><br>
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Veniam fugiat, eligendi neque perferendis optio iure tenetur. Quidem blanditiis, accusamus placeat, exercitationem delectus non, tempore repellendus quaerat, voluptates sed expedita ipsa.</p><br>
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Veniam fugiat, eligendi neque perferendis optio iure tenetur. Quidem blanditiis, accusamus placeat, exercitationem delectus non, tempore repellendus quaerat, voluptates sed expedita ipsa.</p><br>
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Veniam fugiat, eligendi neque perferendis optio iure tenetur. Quidem blanditiis, accusamus placeat, exercitationem delectus non, tempore repellendus quaerat, voluptates sed expedita ipsa.</p><br>
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Veniam fugiat, eligendi neque perferendis optio iure tenetur. Quidem blanditiis, accusamus placeat, exercitationem delectus non, tempore repellendus quaerat, voluptates sed expedita ipsa.</p><br>
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Veniam fugiat, eligendi neque perferendis optio iure tenetur. Quidem blanditiis, accusamus placeat, exercitationem delectus non, tempore repellendus quaerat, voluptates sed expedita ipsa.</p><br>
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Veniam fugiat, eligendi neque perferendis optio iure tenetur. Quidem blanditiis, accusamus placeat, exercitationem delectus non, tempore repellendus quaerat, voluptates sed expedita ipsa.</p><br><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Veniam fugiat, eligendi neque perferendis optio iure tenetur. Quidem blanditiis, accusamus placeat, exercitationem delectus non, tempore repellendus quaerat, voluptates sed expedita ipsa.</p><br>
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Veniam fugiat, eligendi neque perferendis optio iure tenetur. Quidem blanditiis, accusamus placeat, exercitationem delectus non, tempore repellendus quaerat, voluptates sed expedita ipsa.</p><br>
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Veniam fugiat, eligendi neque perferendis optio iure tenetur. Quidem blanditiis, accusamus placeat, exercitationem delectus non, tempore repellendus quaerat, voluptates sed expedita ipsa.</p><br><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Veniam fugiat, eligendi neque perferendis optio iure tenetur. Quidem blanditiis, accusamus placeat, exercitationem delectus non, tempore repellendus quaerat, voluptates sed expedita ipsa.</p><br>
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Veniam fugiat, eligendi neque perferendis optio iure tenetur. Quidem blanditiis, accusamus placeat, exercitationem delectus non, tempore repellendus quaerat, voluptates sed expedita ipsa.</p><br><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Veniam fugiat, eligendi neque perferendis optio iure tenetur. Quidem blanditiis, accusamus placeat, exercitationem delectus non, tempore repellendus quaerat, voluptates sed expedita ipsa.</p><br>
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Veniam fugiat, eligendi neque perferendis optio iure tenetur. Quidem blanditiis, accusamus placeat, exercitationem delectus non, tempore repellendus quaerat, voluptates sed expedita ipsa.</p><br><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Veniam fugiat, eligendi neque perferendis optio iure tenetur. Quidem blanditiis, accusamus placeat, exercitationem delectus non, tempore repellendus quaerat, voluptates sed expedita ipsa.</p><br>
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Veniam fugiat, eligendi neque perferendis optio iure tenetur. Quidem blanditiis, accusamus placeat, exercitationem delectus non, tempore repellendus quaerat, voluptates sed expedita ipsa.</p><br>
+        <nav class="center">
+          <div class="row">
+            <div class="twelve columns nav">
+              <h2><span id="moments" class="active">Moments</span> <strong>|</strong> <span id="thoughts">Thoughts</span></h2>
+            </div>
           </div>
-        </div>
-      </div>
-    </section>
+        </nav>
+        <div class="row">
+          <div class="album">
+            <div class="six columns">
+            </div>
+            <div class="six columns">
+            </div>
+          </div> <!-- album -->
+          </div>
+        </div> <!-- .row -->
+        <a href="#">
+          <div id="arrow2"></div> <!-- SLIDE LEFT -->
+        </a>
+      </div> <!-- .container -->
+    </section> <!-- section#content -->
 
     <script src="js/scroll.js"></script>
   </body>
