Began to implement responsiveness

--- a/index.html
+++ b/index.html
@@ -30,10 +30,8 @@
             <div class="email">
               <p><em>muresannatalia17@gmail.com</em></p>
             </div>
-          </div> <!-- .title -->
-          <a href="#">
             <div id="arrow"></div> <!-- SLIDE RIGHT -->
-          </a>
+          </div> <!-- .title -->
         </div> <!-- .row -->
       </div> <!-- container -->
     </header> <!-- header.hero -->
@@ -53,11 +51,10 @@
             <div class="six columns">
             </div>
           </div> <!-- album -->
+          <div class="twelve columns">
+            <div id="arrow2"></div> <!-- SLIDE LEFT -->
           </div>
         </div> <!-- .row -->
-        <a href="#">
-          <div id="arrow2"></div> <!-- SLIDE LEFT -->
-        </a>
       </div> <!-- .container -->
     </section> <!-- section#content -->
 
